--- a/assets/css/substyle.css
+++ b/assets/css/substyle.css
@@ -85,16 +85,15 @@
     margin-top: 5rem;
     position: relative;
     width: 100vw;
-    height: 34rem;
+    height: 25rem;
     background: linear-gradient(rgba(7, 16, 19, 0.7), rgba(7, 16, 19, 0.7)), url("../images/WhatsApp%20Image%202025-01-24%20at%2022.43.15_eeb758de.jpg");
     background-size: cover;
     background-position: center;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    gap: 12%;
 }
 
 body{
@@ -111,14 +110,13 @@ body{
     }
 }
 
-
 .banner-intro {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     width: 50%;
-    justify-content: center;
-    align-items: flex-start;
+    align-self: flex-end;
+    margin-bottom: 2rem;
 }
 
 .t1, .t2, .t3 {
@@ -128,7 +126,7 @@ body{
 }
 
 .t1{
-    font-size: 2rem;
+    font-size: 1.2rem;
 }
 
 .t2{
@@ -161,7 +159,9 @@ body{
     flex-direction: row;
     gap: 2rem;
     align-items: center;
-    justify-content: flex-start;
+    align-self: flex-start;
+    justify-content: flex-end;
+    margin-top: 2rem;
 }
 
 #download{
@@ -215,31 +215,13 @@ body{
 }
 
 .container{
+    margin-top: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 4rem;
     width: 100vw;
-    height: 34rem;
-}
-
-.container-pic{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    height: 30rem;
-    width: 30rem;
-    box-shadow: 0.7rem 0.7rem 0.3rem rgba(0, 0, 0, 0.25);
-}
-
-#pic2{
-    height: 28rem;
-    width: 28rem;
-    background-image: url("../images/pic2.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    height: 25rem;
 }
 
 .container-card{
@@ -248,8 +230,8 @@ body{
     align-items: center;
     flex-direction: column;
     background-color: #FFFD98;
-    height: 30rem;
-    width: 30rem;
+    height: 80%;
+    width: 90%;
     box-shadow: 0.7rem 0.7rem 0.3rem rgba(0, 0, 0, 0.25);
     border: 0.2rem solid #071013;
     border-radius: 2rem;
@@ -261,9 +243,15 @@ body{
     font-size: 1.8rem;
 }
 
-.description{
-    width: 80%;
+.description {
+    width: 95%;
     line-height: 1.6;
+    font-size: 1rem;
+}
+
+
+.description li{
+    line-height: 1.8;
 }
 
 hr{
@@ -350,8 +338,7 @@ footer{
     justify-content: flex-start;
     align-items: flex;
     gap: 1rem;
-    position: absolute;
-    height: 16rem;
+    height: 20rem;
     width: 100vw;
     background-color: #191516;
     color: white;
@@ -399,6 +386,66 @@ footer hr{
 .copyright-heading, .copyright-description{
     font-size: small;
     text-align: end;
-    margin-right: 2rem;
+    margin-right: 1rem;
     margin-bottom: 1rem;
+}
+
+.formgroup {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFD98;
+    height: auto;
+    width: 80%;
+    padding: 2rem;
+    gap: 2rem;
+    margin-top: 2rem;
+    border: 0.2rem solid #071013;
+    border-radius: 1.2rem;
+    box-shadow: 0.5rem 0.5rem 0.3rem rgba(0, 0, 0, 0.2);
+    margin-bottom: 2rem;
+}
+
+textarea {
+    width: 90%;
+    height: 8rem;
+    padding: 0.8rem;
+    border-radius: 0.5rem;
+    border: 0.15rem solid #071013;
+    font-size: 1rem;
+    resize: vertical;
+    margin: 1rem 0;
+}
+
+input {
+    width: 90%;
+    padding: 0.7rem;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    border: 0.15rem solid #071013;
+}
+
+textarea:focus,
+input:focus,
+.submit:hover {
+    outline: none;
+    background-color: #00B295;
+    box-shadow: 0 0 0.5rem rgba(0, 178, 149, 0.5);
+}
+
+input:hover,
+textarea:hover,
+.submit:hover {
+    transform: scale(1.02);
+    transition: 0.2s ease-in-out;
+}
+
+.submit{
+    width: 8rem; 
+    height: 3rem;
+    font-size: 1rem;
+    background-color: #191516;
+    color: white;
+    font-weight: bold;
 }
