--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@
     align-items: center;
     flex-wrap: wrap;
     height: 5rem;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     background-color: #00B295;
     gap: 25rem;
@@ -84,7 +84,7 @@
 .banner {
     margin-top: 5rem;
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 34rem;
     background: linear-gradient(rgba(7, 16, 19, 0.7), rgba(7, 16, 19, 0.7)), url("../images/WhatsApp%20Image%202025-01-24%20at%2022.43.15_eeb758de.jpg");
     background-size: cover;
@@ -219,7 +219,7 @@ body{
     justify-content: center;
     align-items: center;
     gap: 4rem;
-    width: 100vw;
+    width: 100%;
     height: 34rem;
 }
 
@@ -269,8 +269,7 @@ body{
 hr{
     background-color: #071013;
     height: 0.3rem;
-    width: 82.5rem;
-    margin-left: 2rem;
+    width: 90%;
 }
 
 .info-section{
@@ -287,8 +286,7 @@ hr{
     align-items: flex-start;
     gap: 0.5rem;
     background-color: #FFFD98;
-    padding: 1rem;
-    padding-left: 2rem;
+    padding: 2rem;
     line-height: 1.8;
     box-shadow: 0.7rem 0.7rem 0.3rem rgba(0, 0, 0, 0.25);
     border: 0.2rem solid #071013;
@@ -341,18 +339,15 @@ hr{
 .divider{
     background-color: #071013;
     height: 0.3rem;
-    margin-right: 2rem;
 }
 
 footer{
     flex-direction: column;
     display: flex;
     justify-content: flex-start;
-    align-items: flex;
     gap: 1rem;
-    position: absolute;
-    height: 16rem;
-    width: 100vw;
+    height: 18rem;
+    width: 100%;
     background-color: #191516;
     color: white;
 }
@@ -360,6 +355,8 @@ footer{
 footer hr{
     background-color: white;
     height: 0.1rem;
+    width: 90%;
+    align-self: center;
 }
 
 .footer-heading{
@@ -399,6 +396,6 @@ footer hr{
 .copyright-heading, .copyright-description{
     font-size: small;
     text-align: end;
-    margin-right: 2rem;
+    margin-right: 4rem;
     margin-bottom: 1rem;
 }
