--- a/assets/css/substyle.css
+++ b/assets/css/substyle.css
@@ -28,7 +28,7 @@
     align-items: center;
     flex-wrap: wrap;
     height: 5rem;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     background-color: #00B295;
     gap: 25rem;
@@ -84,7 +84,7 @@
 .banner {
     margin-top: 5rem;
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 25rem;
     background: linear-gradient(rgba(7, 16, 19, 0.7), rgba(7, 16, 19, 0.7)), url("../images/WhatsApp%20Image%202025-01-24%20at%2022.43.15_eeb758de.jpg");
     background-size: cover;
@@ -220,7 +220,7 @@ body{
     justify-content: center;
     align-items: center;
     gap: 4rem;
-    width: 100vw;
+    width: 100%;
     height: 25rem;
 }
 
@@ -339,7 +339,7 @@ footer{
     align-items: flex;
     gap: 1rem;
     height: 20rem;
-    width: 100vw;
+    width: 100%;
     background-color: #191516;
     color: white;
 }
@@ -362,7 +362,7 @@ footer hr{
     align-items: center;
     margin-top: 0.8rem;
     line-height: 1.6;
-    gap: 38%;
+    gap: 8rem;
 }
 
 .social{
