Added New peoject and certificate

--- a/assets/css/substyle.css
+++ b/assets/css/substyle.css
@@ -449,3 +449,12 @@ textarea:hover,
     color: white;
     font-weight: bold;
 }
+
+#sos{
+    color: blue;
+    cursor: pointer;
+}
+
+#sos:hover{
+    text-decoration: underline;
+}
